deploy/yamls/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: api
  name: api
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      move2kube.konveyor.io/service: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: api
      name: api
    spec:
      containers:
        - env:
            - name: REDIS_URL
              value: redis://redis:6379
          image: quay.io/myproject/fibonacci-api:latest
          imagePullPolicy: Always
          name: api
          ports:
            - containerPort: 1234
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: quay-io-imagepullsecret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
